# llm-uide

./: .gitignore  README.md
.github/workflows/: deploy-front-s3.yml
back/: Dockerfile  README.md  docker-compose.yml  llm.py  main.py  pyproject.toml  schemas.py
back/autonomo1/: binary_search_with_steps.py  test_binary_search_with_steps.py
back/tests/: test_llm.py  test_main.py  test_schemas.py
front/: README.md  index.html  package.json  tsconfig.app.json
front/lambda/: index.js
front/src/: App.css  App.tsx  index.css
front/src/aws/: s3Client.ts
front/src/components/: HeaderTabs.tsx  VideoList.tsx  VideoPlayer.tsx
front/src/pages/: BinarySearchPage.tsx  LlmPage.tsx  VideoGalleryPage.css  VideoGalleryPage.tsx  VideoUploadPage.css  VideoUploadPage.tsx
front/src/pages/__tests__/: BinarySearchPage.test.tsx  LlmPage.test.tsx  VideoUploadPage..test.tsx
front/src/store/: chatStore.test.ts  chatStore.ts
